<resources>
    <string name="app_name">BroadcastFlagsExample</string>
    <string name="header">Test Flag Broadcast</string>
    <string name="start">Start Countdown</string>
    <string name="flag1">FLAG_CANCEL_CURRENT</string>
    <string name="flag2">FLAG_IMMUTABLE</string>
    <string name="flag3">FLAG_NO_CREATE</string>
    <string name="flag4">FLAG_ONE_SHOT</string>
    <string name="flag5">FLAG_UPDATE_CURRENT</string>
</resources>